[gd_scene load_steps=10 format=3 uid="uid://dovum0hd7bil2"]

[ext_resource type="Texture2D" uid="uid://bhoe74csios52" path="res://assets/sprites/Tiny Swords/Resources/Resources/W_Idle_(NoShadow).png" id="1_ebps4"]
[ext_resource type="Script" path="res://ui/build_popup.gd" id="1_wp7dk"]
[ext_resource type="Theme" uid="uid://d24e25bfjbwcu" path="res://ui/osa_theme.tres" id="2_ppahm"]
[ext_resource type="Texture2D" uid="uid://g4626mwuuoa7" path="res://assets/sprites/Tiny Swords/Resources/Resources/M_Idle_(NoShadow).png" id="3_udfyo"]
[ext_resource type="Texture2D" uid="uid://cdbiektkjf41" path="res://assets/sprites/Tiny Swords/Resources/Resources/G_Idle_(NoShadow).png" id="4_rx1bm"]
[ext_resource type="Texture2D" uid="uid://cj3ts3hm45iqi" path="res://assets/sprites/Tiny Swords/UI/Icons/Regular_07.png" id="5_kyd4t"]

[sub_resource type="Animation" id="Animation_glsgc"]
resource_name = "close"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(324, 404), Vector2(324, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, 212)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w4g0a"]
resource_name = "open"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Vector2(324, 96), Vector2(324, 404)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 0.5),
"update": 0,
"values": [Vector2(2.08165e-12, 212), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xidu"]
_data = {
"close": SubResource("Animation_glsgc"),
"open": SubResource("Animation_w4g0a")
}

[node name="BuildPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -500.0
offset_right = -176.0
offset_bottom = 404.0
script = ExtResource("1_wp7dk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 324.0
offset_bottom = 410.0
theme_type_variation = &"VerticalBanner"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="WoodCount" type="Panel" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"Carved"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer/GridContainer/WoodCount"]
position = Vector2(58, 23)
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_ebps4")

[node name="WoodRequiredLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/GridContainer/WoodCount"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 62.0
offset_top = 81.0
offset_right = 119.0
offset_bottom = 121.0
theme = ExtResource("2_ppahm")
theme_override_font_sizes/normal_font_size = 40
text = "10"
scroll_active = false
autowrap_mode = 0
text_direction = 2

[node name="MeatCount" type="Panel" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"Carved"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer/GridContainer/MeatCount"]
position = Vector2(54, 35)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_udfyo")

[node name="MeatRequiredLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/GridContainer/MeatCount"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 62.0
offset_top = 80.0
offset_right = 119.0
offset_bottom = 120.0
theme = ExtResource("2_ppahm")
theme_override_font_sizes/normal_font_size = 40
text = "10"
scroll_active = false
autowrap_mode = 0
text_direction = 2

[node name="GoldCount" type="Panel" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"Carved"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer/GridContainer/GoldCount"]
position = Vector2(46, 37)
scale = Vector2(1.6, 1.6)
texture = ExtResource("4_rx1bm")

[node name="GoldRequiredLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/GridContainer/GoldCount"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 63.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 120.0
theme = ExtResource("2_ppahm")
theme_override_font_sizes/normal_font_size = 40
text = "10"
scroll_active = false
autowrap_mode = 0
text_direction = 2

[node name="Additional" type="Panel" parent="PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 12)
layout_mode = 2
theme_type_variation = &"Carved"

[node name="BuildButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_ppahm")
theme_type_variation = &"BlueButton"
icon = ExtResource("5_kyd4t")
icon_alignment = 1
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5xidu")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
